--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.sch-bak
 *~
 _autosave-*
+\#auto*
 *.tmp
 *-save.pro
 *-save.kicad_pcb
@@ -27,3 +28,6 @@ fp-info-cache
 # Exported BOM files
 *.xml
 *.csv
+
+# lengthMatching configuration files
+lengthMatching.json
